# src/routes/users.router.js
@@ -7,7 +7,10 @@ import {
     sendPasswordResetEmail,
     validateResetToken,
     resetPassword,
-    getAllUsers
+    getAllUsers,
+    getUserById,
+    deleteUser,
+    updateUser
 } from '../controllers/users.controller.js';
 import passportCall from '../middlewares/passportCall.middleware.js';
 import { handlePolicies } from '../middlewares/handlePolicies.middleware.js';
@@ -15,7 +18,12 @@ import { handlePolicies } from '../middlewares/handlePolicies.middleware.js';
 export default class UsersRouter extends CustomRouter {
     init() {
 
-        this.get('/', ['PUBLIC'], getAllUsers)        
+        this.get('/', ['public'], getAllUsers);
+        this.get('/:uid', ['public'], getUserById);
+        this.get('/by-email:email',
+            passportCall('current'),
+            handlePolicies(['admin']),
+            getUserByEmail);
         this.get('/github', passport.authenticate('github', { scope: ['user:email'] }));
         this.get('/githubcallback',
             passport.authenticate('github', {
@@ -27,9 +35,7 @@ export default class UsersRouter extends CustomRouter {
         this.get('/reset-password', [], validateResetToken);
         this.post('/reset-password-request', [], sendPasswordResetEmail);
         this.post('/reset-password', [], resetPassword);
-        this.get('/:email',
-            passportCall('current'),
-            handlePolicies(['ADMIN']),
-            getUserByEmail);
+        this.put('/:uid', ['admin'], updateUser);
+        this.delete('/:uid', ['admin'], deleteUser);
     }
 }
